--- a/app/src/main/res/layout/activity_accounting_service1.xml
+++ b/app/src/main/res/layout/activity_accounting_service1.xml
@@ -23,9 +23,8 @@
                 <TableLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    android:stretchColumns="1,2,3,4,5">
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp">
 
                     <TableRow
                         android:layout_width="wrap_content"
@@ -37,6 +36,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Request for Issuance of Withholding Tax Certificate (BIR Form 2307)"
+                            android:textSize="16sp"
                             android:textStyle="bold" />
                     </TableRow>
 
@@ -252,7 +252,7 @@
                             android:padding="5sp"
                             android:text="CLIENT STEPS"
                             android:textColor="#49454F"
-                            android:textSize="14sp"
+                            android:textSize="12sp"
                             android:textStyle="bold" />
 
                         <TextView
@@ -265,7 +265,7 @@
                             android:padding="5sp"
                             android:text="AGENCY ACTIONS"
                             android:textColor="#49454F"
-                            android:textSize="14sp"
+                            android:textSize="12sp"
                             android:textStyle="bold" />
 
                         <TextView
@@ -278,7 +278,7 @@
                             android:padding="5sp"
                             android:text="FEES TO BE PAID"
                             android:textColor="#49454F"
-                            android:textSize="14sp"
+                            android:textSize="12sp"
                             android:textStyle="bold" />
 
                         <TextView
@@ -291,7 +291,7 @@
                             android:padding="5sp"
                             android:text="PROCESSING TIME"
                             android:textColor="#49454F"
-                            android:textSize="14sp"
+                            android:textSize="12sp"
                             android:textStyle="bold" />
 
                         <TextView
@@ -304,13 +304,13 @@
                             android:padding="5sp"
                             android:text="PERSON RESPONSIBLE"
                             android:textColor="#49454F"
-                            android:textSize="14sp"
+                            android:textSize="12sp"
                             android:textStyle="bold" />
                     </TableRow>
 
                     <TableRow
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" >
+                        android:layout_height="match_parent">
 
                         <TextView
                             android:id="@+id/tableClientSteps"
@@ -322,7 +322,7 @@
                             android:padding="5sp"
                             android:text="1.	Submit request slip to the receiving clerk"
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/tableAgencyAction"
@@ -334,7 +334,7 @@
                             android:padding="5sp"
                             android:text="1.1. Review and accept the request slip"
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/tableFees"
@@ -346,7 +346,7 @@
                             android:padding="5sp"
                             android:text="None"
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/tableProcTime"
@@ -358,7 +358,7 @@
                             android:padding="5sp"
                             android:text="10 minutes"
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/tableResponsible"
@@ -368,14 +368,14 @@
                             android:background="@drawable/cell_shape_normal"
                             android:gravity="center|top"
                             android:padding="5sp"
-                            android:text="Administrative Aide II\n\nMunicipal Accounting Office"
+                            android:text="Administrative Aide II\nMunicipal Accounting Office"
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
                     </TableRow>
 
                     <TableRow
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" >
+                        android:layout_height="match_parent">
 
                         <TextView
                             android:id="@+id/tableClientSteps1"
@@ -386,7 +386,7 @@
                             android:gravity="top|left"
                             android:padding="5sp"
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/tableAgencyAction1"
@@ -398,7 +398,7 @@
                             android:padding="5sp"
                             android:text="1.2. Review the paid vouchers "
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/tableFees1"
@@ -410,7 +410,7 @@
                             android:padding="5sp"
                             android:text="None"
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/tableProcTime1"
@@ -422,7 +422,7 @@
                             android:padding="5sp"
                             android:text="20 minutes per voucher"
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/tableResponsible1"
@@ -432,14 +432,14 @@
                             android:background="@drawable/cell_shape_normal"
                             android:gravity="center|top"
                             android:padding="5sp"
-                            android:text="Administrative Aide II\n\nMunicipal Accounting Office\n\nMAA-II\n\nMunicipal Accounting Office"
+                            android:text="Administrative Aide II\nMunicipal Accounting Office\n\nMAA-II\nMunicipal Accounting Office"
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
                     </TableRow>
 
                     <TableRow
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" >
+                        android:layout_height="match_parent">
 
                         <TextView
                             android:id="@+id/tableClientSteps2"
@@ -450,7 +450,7 @@
                             android:gravity="top|left"
                             android:padding="5sp"
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/tableAgencyAction2"
@@ -462,7 +462,7 @@
                             android:padding="5sp"
                             android:text="1.3. Prepare the BIR Form"
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/tableFees2"
@@ -474,7 +474,7 @@
                             android:padding="5sp"
                             android:text="None"
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/tableProcTime2"
@@ -486,7 +486,7 @@
                             android:padding="5sp"
                             android:text="20 minutes"
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/tableResponsible2"
@@ -496,14 +496,14 @@
                             android:background="@drawable/cell_shape_normal"
                             android:gravity="center|top"
                             android:padding="5sp"
-                            android:text="Administrative Aide II\n\nMunicipal Accounting Office\n\nMAA-II\n\nMunicipal Accounting Office"
+                            android:text="Administrative Aide II\nMunicipal Accounting Office\n\nMAA-II\nMunicipal Accounting Office"
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
                     </TableRow>
 
                     <TableRow
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" >
+                        android:layout_height="match_parent">
 
                         <TextView
                             android:id="@+id/tableClientSteps3"
@@ -514,7 +514,7 @@
                             android:gravity="top|left"
                             android:padding="5sp"
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/tableAgencyAction3"
@@ -526,7 +526,7 @@
                             android:padding="5sp"
                             android:text="1.4. Sign the BIR Form"
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/tableFees3"
@@ -538,7 +538,7 @@
                             android:padding="5sp"
                             android:text="None"
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/tableProcTime3"
@@ -550,7 +550,7 @@
                             android:padding="5sp"
                             android:text="10 minutes"
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/tableResponsible3"
@@ -560,14 +560,14 @@
                             android:background="@drawable/cell_shape_normal"
                             android:gravity="center|top"
                             android:padding="5sp"
-                            android:text="Municipal Accountant\n\nMunicipal Accountant’s Office"
+                            android:text="Municipal Accountant\nMunicipal Accountant’s Office"
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
                     </TableRow>
 
                     <TableRow
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" >
+                        android:layout_height="match_parent">
 
                         <TextView
                             android:id="@+id/tableClientSteps4"
@@ -579,7 +579,7 @@
                             android:padding="5sp"
                             android:text="2. Receive the BIR Form 2307"
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/tableAgencyAction4"
@@ -591,7 +591,7 @@
                             android:padding="5sp"
                             android:text="2.1. Release the signed BIR Form 2307 to the client"
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/tableFees4"
@@ -603,7 +603,7 @@
                             android:padding="5sp"
                             android:text="None"
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/tableProcTime4"
@@ -615,7 +615,7 @@
                             android:padding="5sp"
                             android:text="3 minutes"
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/tableResponsible4"
@@ -625,14 +625,14 @@
                             android:background="@drawable/cell_shape_normal"
                             android:gravity="center|top"
                             android:padding="5sp"
-                            android:text="Administrative Aide II\n\nMunicipal Accounting Office\n\nMAA-II\n\nMunicipal Accounting Office"
+                            android:text="Administrative Aide II\nMunicipal Accounting Office\n\nMAA-II\nMunicipal Accounting Office"
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
                     </TableRow>
 
                     <TableRow
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" >
+                        android:layout_height="match_parent">
 
                         <TextView
                             android:id="@+id/tableClientSteps5"
@@ -644,7 +644,7 @@
                             android:padding="5sp"
                             android:text="3. Accomplish the Client Satisfaction Service (CSS) Form and drop in the CSS drop box"
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/tableAgencyAction5"
@@ -656,7 +656,7 @@
                             android:padding="5sp"
                             android:text="3.1. Request the client to accomplish the Client Satisfaction Service (CSS) form"
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/tableFees5"
@@ -668,7 +668,7 @@
                             android:padding="5sp"
                             android:text="None"
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/tableProcTime5"
@@ -680,7 +680,7 @@
                             android:padding="5sp"
                             android:text="5 minutes"
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/tableResponsible5"
@@ -690,14 +690,14 @@
                             android:background="@drawable/cell_shape_normal"
                             android:gravity="center|top"
                             android:padding="5sp"
-                            android:text="Administrative Aide II\n\nMunicipal Accounting Office "
+                            android:text="Administrative Aide II\nMunicipal Accounting Office "
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
                     </TableRow>
 
                     <TableRow
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" >
+                        android:layout_height="match_parent">
 
                         <TextView
                             android:id="@+id/tableTotal"
@@ -709,7 +709,7 @@
                             android:padding="5sp"
                             android:text="TOTAL:"
                             android:textColor="#49454F"
-                            android:textSize="14sp"
+                            android:textSize="12sp"
                             android:textStyle="bold" />
 
                         <TextView
@@ -722,7 +722,7 @@
                             android:padding="5sp"
                             android:text="1 hours and 8 minutes"
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/tableTotalBlank"
@@ -733,7 +733,7 @@
                             android:gravity="center|top"
                             android:padding="5sp"
                             android:textColor="#49454F"
-                            android:textSize="14sp" />
+                            android:textSize="12sp" />
                     </TableRow>
 
                 </TableLayout>
