--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,10 +13,25 @@
         tools:layout_editor_absoluteX="46dp"
         tools:layout_editor_absoluteY="-128dp">
 
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="143dp"
+            android:text="OFFICES"
+            android:textAlignment="center"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="182dp"
             android:visibility="visible"
+            app:layout_constraintTop_toBottomOf="@+id/textView6"
             app:layout_wrapBehaviorInParent="horizontal_only">
 
             <LinearLayout
@@ -25,23 +40,13 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView6"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="150dp"
-                    android:text="OFFICES"
-                    android:textAlignment="center"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
-
-                <TextView
                     android:id="@+id/macco"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
                     android:onClick="accounting"
                     android:text="Municipal Accounting Office"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textColor="#673AB7" />
 
                 <TextView
                     android:id="@+id/textView8"
@@ -49,7 +54,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Municipal Administrator Office"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textColor="#673AB7" />
 
                 <TextView
                     android:id="@+id/textView9"
@@ -57,7 +63,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Municipal Agriculture Office"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textColor="#673AB7" />
 
                 <TextView
                     android:id="@+id/textView10"
@@ -65,7 +72,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Municipal Assessor's Office"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textColor="#673AB7" />
 
                 <TextView
                     android:id="@+id/textView11"
@@ -73,7 +81,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Municipal Budget Office"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textColor="#673AB7" />
 
                 <TextView
                     android:id="@+id/textView12"
@@ -81,7 +90,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Municipal Business Processing and Licensing Office"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textColor="#673AB7" />
 
                 <TextView
                     android:id="@+id/textView13"
@@ -89,7 +99,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Municipal Civil Registry Office"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textColor="#673AB7" />
 
                 <TextView
                     android:id="@+id/textView14"
@@ -97,7 +108,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Municipal Disaster Risk Reduction Management Office"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textColor="#673AB7" />
 
                 <TextView
                     android:id="@+id/textView"
@@ -105,7 +117,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Municipal Engineering Office"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textColor="#673AB7" />
 
                 <TextView
                     android:id="@+id/textView2"
@@ -113,7 +126,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Municipal Environmental and Natural Resources"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textColor="#673AB7" />
 
                 <TextView
                     android:id="@+id/textView3"
@@ -121,7 +135,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Municipal General Services Office"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textColor="#673AB7" />
 
                 <TextView
                     android:id="@+id/textView15"
@@ -129,7 +144,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Municipal Health Office"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textColor="#673AB7" />
 
                 <TextView
                     android:id="@+id/textView16"
@@ -137,7 +153,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Human Resource Management Office"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textColor="#673AB7" />
 
                 <TextView
                     android:id="@+id/textView17"
@@ -145,7 +162,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Municipal Mayor's Office"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textColor="#673AB7" />
 
                 <TextView
                     android:id="@+id/textView18"
@@ -153,7 +171,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Bids and Awards Committee"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textColor="#673AB7" />
 
                 <TextView
                     android:id="@+id/textView19"
@@ -161,7 +180,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Indigineous People Mandatory Representative"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textColor="#673AB7" />
 
                 <TextView
                     android:id="@+id/textView20"
@@ -169,7 +189,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Kitaotao Water System Office"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textColor="#673AB7" />
 
                 <TextView
                     android:id="@+id/textView22"
@@ -177,7 +198,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Local Economic Development and \nInvestment Promotion Office"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textColor="#673AB7" />
 
                 <TextView
                     android:id="@+id/textView23"
@@ -185,7 +207,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Local Youth Development Office"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textColor="#673AB7" />
 
                 <TextView
                     android:id="@+id/textView24"
@@ -193,7 +216,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Municipal Tourism Office"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textColor="#673AB7" />
 
                 <TextView
                     android:id="@+id/textView25"
@@ -201,7 +225,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Person With Disability Office"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textColor="#673AB7" />
 
                 <TextView
                     android:id="@+id/textView26"
@@ -209,7 +234,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Public Employment Services Office"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textColor="#673AB7" />
 
                 <TextView
                     android:id="@+id/textView27"
@@ -217,7 +243,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Office of the Senior Citizen's Affairs"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textColor="#673AB7" />
 
                 <TextView
                     android:id="@+id/textView28"
@@ -225,7 +252,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Municipal Planning and Development Office"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textColor="#673AB7" />
 
                 <TextView
                     android:id="@+id/textView29"
@@ -233,7 +261,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Population Development Office"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textColor="#673AB7" />
 
                 <TextView
                     android:id="@+id/textView30"
@@ -241,7 +270,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Sangguniang Bayan Office"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textColor="#673AB7" />
 
                 <TextView
                     android:id="@+id/textView31"
@@ -249,7 +279,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Municipal Social Welfare and Development Office"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textColor="#673AB7" />
 
                 <TextView
                     android:id="@+id/textView32"
@@ -257,7 +288,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="Municipal Treasurer's Office"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:textColor="#673AB7" />
 
             </LinearLayout>
         </ScrollView>
